# o11n

./: .gitignore  README.md  makeIcon.txt  package-lock.json  package.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: publish.yml
prompts/: animation.md  framer-motion.xml  react-nextjs-mui.xml  xml to md .md
scripts/: bump-version.cjs
src/: App.css  App.tsx  main.tsx  theme.ts  types.ts
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  licenseFile.txt  tarui.appstore.conf.json  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: 1024x1024.icns  128x128.icns  16x16.icns  256x256.icns  32x32.icns  512x512.icns  64x64.icns  icon.icns  o11n-first-logo_1024x1024_1024x1024.icns  o11n-first-logo_128x128_128x128.icns  o11n-first-logo_16x16_16x16.icns  o11n-first-logo_256x256_256x256.icns  o11n-first-logo_32x32_32x32.icns  o11n-first-logo_512x512_512x512.icns  o11n-first-logo_64x64_64x64.icns
src-tauri/src/: apply_changes.rs  apply_file_change.rs  change_types.rs  fs_api.rs  lib.rs  main.rs  parse_change_protocol.rs  token_utils.rs
src/api/: fs.ts  llm.ts
src/components/: AccordionItem.tsx  ActionButtons.tsx  ApiKeysModal.tsx  AutoUpdateModal.tsx  ChatInterface.tsx  Commit.tsx  ContextPersistenceManager.tsx  Copy.tsx  CreateItemModal.tsx  DeleteConfirmModal.tsx  DirectoryView.tsx  FileCard.tsx  FileExplorer.css  FileExplorer.tsx  FileItemWithHover.tsx  FilePreview.css  FilePreview.tsx  FilePreviewModal.tsx  FolderGroup.tsx  HorizontalSeparator.tsx  InstructionsInput.tsx  LogoSVG.tsx  ModeButtons.tsx  MonacoEditor.css  MonacoEditor.tsx  NewProjectModal.tsx  PlanInput.tsx  PlanPreview.tsx  Providers.tsx  RetroButton.tsx  RightPanel.tsx  SearchFiles.tsx  SelectedFiles.tsx  SettingsMenu.tsx  SmallLogoSVG.tsx  SpotifyCallback.tsx  TemplateSelection.tsx  TestComponent.tsx  ThemeModal.tsx  Toast.tsx  (+1 more)
src/context/: AppContext.tsx  UserContext.tsx
src/utils/: formatFileSize.ts  formatWithPrettier.ts  generateFileMap.ts  image.ts  markdownLanguages.ts  mdFormattingInstructions.txt  useShortcut.ts  xmlFormattingInstructions.txt
