[package]
name = "o11n"
version = "1.2.2"
description = "Prompt generation, file orchestration."
authors = ["Senna Automation", "Justin Kahrs"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "o11n_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# required to fix a bug, remove once fix is pulled in elsewhere (unsure of source)
ring = { version = "0.17.13", default-features = false, features = ["std"] }

anyhow = "1.0"
quick-xml = "0.37"
log = "0.4"
regex = "1.9"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
sentry = "0.37.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ignore = "0.4"
notify = "6"
tauri-plugin="2.2.0"
tauri-plugin-fs = "2"
tauri-plugin-log = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
markdown = "1.0.0-alpha.23"
tauri-plugin-deep-link = "2"
tiktoken-rs = "0.6.0"
tauri-plugin-process = "2"
tauri-plugin-os = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"

[profile.dev]  
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.

